vlib/v/parser/tests/if_guard_redefinition.vv
fn opt_fn() ?int {
    return 2
}

fn main() {
    x := 1
    if x := opt_fn() {
        println(x)
    }
}
